--- a/backend/tasks/src/main/resources/application.properties
+++ b/backend/tasks/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate.ddl-auto=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Add logging for better debugging
+logging.level.com.aman.tasks=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver=DEBUG
